# launchpad

./: .env  .env.devel  .env.test  Cargo.toml  Makefile  README.md
migrations/2021-06-28-003127_projects_table/: down.sql  up.sql
src/: error.rs  lib.rs  main.rs  models.rs  schema.rs  static_routes.rs  tests.rs
src/api/: routes.rs
src/models/: db_models.rs  http_models.rs  mod.rs
static/: index.html
tests/: integration_test.rs
