[package]
name = "launchpad"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version="0.4", features = ["serde"] }
diesel = { version = "1.4.7", features = ["chrono", "postgres", "r2d2"] }
dotenv = "0.15.0"
failure = { version = "0.1.8", features = ["derive"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }

[dependencies.rocket_sync_db_pools]
features = ["diesel_postgres_pool"]
version = "0.1.0-rc.1"
